# rustometry

./: Cargo.toml  README.md
benches/: get_cloud_thetas.rs  integration_bench.rs  parse_point_cloud.rs
src/: lib.rs  parser.rs  spatial.rs
tests/: integration_test.rs
tests/files/: test_point_cloud.txt
