[package]
name = "rustometry"
version = "0.1.2"
edition = "2021"
authors = [
  "bradmartin333"
]
keywords = ["3D", "spatial", "plane"]
readme = "README.md"
description = "Spatial Geometry in Pure Rust"
license = "MIT"
repository = "https://github.com/bradmartin333/rustometry.git"
homepage = "https://github.com/bradmartin333/rustometry"
documentation = "https://docs.rs/rustometry"

[lib]
name = "rustometry"
path = "./src/lib.rs"

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parse_point_cloud"
harness = false
path = "./benches/parse_point_cloud.rs"

[[bench]]
name = "get_cloud_thetas"
harness = false
path = "./benches/get_cloud_thetas.rs"